# hist-opt

./: CMakeLists.txt  README.md
src/: histogram.cpp  histogram.h  main.cpp
